fix dark mode

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -15,7 +15,7 @@ html {
 
 @media (prefers-color-scheme: dark) {
 	html {
-    --background-color: #FFF8E4;
+    --background-color: #1e1e1e;
     --foreground-color: rgba(0, 0, 0, 0.3);
 
     --text-color-dark: rgba(255, 255, 255, 1);
